Having a target really breaks this with lots of "Cannot access iframe" errors

--- a/app/via_test_harness/templates/ui.html.jinja2
+++ b/app/via_test_harness/templates/ui.html.jinja2
@@ -61,7 +61,7 @@
         {% if via_urls %}
             <ul>
                 {% for url in via_urls %}
-                    <li><a href="{{ url }}" target="{{ app }}">{{ url | truncate(120) }}</a></li>
+                    <li><a href="{{ url }}">{{ url | truncate(120) }}</a></li>
                 {% endfor %}
             </ul>
 
